--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,476 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body {
+  margin: 0;
+  font-family: "Raleway";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+html {
+  background: #010725 !important;
+}
+
+:root {
+  background: linear-gradient(0deg, #010725 0%, #010725 100%), #fff;
+  text-align: center;
+  user-select: none;
+}
+
+.App {
+  background: linear-gradient(0deg, #010725 0%, #010725 100%), #fff;
+  text-align: center;
+  user-select: none;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
 }
 
+.nextui-c-grJsex-ikUaMfZ-css {
+  max-width: 1200px !important;
+}
+
+.App-header {
+  min-height: 100vh;
+  color: white;
+  overflow: hidden;
+}
+
+.nav-link {
+  font-family: "Raleway" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  color: #aab0fe !important;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.button-cta {
+  background: #4b21ff;
+  border-radius: 58.4336px;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+  opacity: 0 !important;
+}
+
+.carousel-item {
+  height: 66vh;
+}
+
+@media only screen and (max-width: 400px) {
+  .carousel-item {
+    height: 60vh;
+  }
+}
+
+.navbar-toggler,
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+.navbar {
+  height: 5rem;
+  display: flex;
+  background: rgba(41, 54, 119, 0.2);
+  backdrop-filter: blur(20px);
+  border-radius: 16px;
+  position: absolute;
+  width: 100% !important;
+}
+
+.d-block {
+  border-radius: 30px !important;
+  height: 50px !important;
+  width: 50px !important;
+}
+
+@media only screen and (max-width: 992px) {
+  .navbar {
+    position: fixed !important;
+    top: 1rem !important;
+    z-index: 3;
+    width: 90% !important;
+  }
+}
+
+div {
+  font-family: "Raleway";
+}
+
+span.line {
+  display: inline-block;
+}
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  padding-top: 0px;
+}
+
+.gradient {
+  position: absolute;
+  width: 20%;
+  height: 30%;
+  right: 10px;
+  background: rgba(74, 33, 255, 0.322);
+  filter: blur(93px);
+}
+
+@media (max-width: 992px) {
+  .nav-link {
+    background-color: #080e2b;
+    border: 2px solid #2e3b7d;
+    border-radius: 1rem;
+    width: 80%;
+    margin: 1rem auto;
+  }
+
+  .navbar-collapse {
+    background-color: #080e2b;
+    margin-top: 3%;
+    width: 800px;
+    border-radius: 2rem;
+  }
+}
+
+.bookBtn {
+  margin: 1rem 0rem;
+  font-size: 18px !important;
+  font-weight: 700 !important;
+  background: #4b21ff;
+  border-radius: 58.4336px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 180.13px;
+  height: 58.59px;
+  transform: translateX(50%);
+}
+
+.navBtn {
+  color: white !important;
+  cursor: pointer;
+  font-size: 14px !important;
+  font-weight: 900 !important;
+  border-radius: 58.434px;
+  background: #4b21ff;
+  display: flex;
+  width: 177px !important;
+  padding: 19.795px 22.064px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6.186px;
+}
+
+.sendMessage {
+  cursor: pointer;
+  font-size: 14px !important;
+  font-weight: 900 !important;
+  border-radius: 58.434px;
+  background: #4b21ff;
+  display: flex;
+  padding: 19.795px 22.064px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6.186px;
+}
+@media only screen and (max-width: 1280px) {
+  .navBtn {
+    cursor: pointer;
+    font-size: 14px !important;
+    font-weight: 900 !important;
+    border-radius: 58.434px;
+    background: #4b21ff;
+    display: flex;
+    width: 177px !important;
+    padding: 19.795px 22.064px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 6.186px;
+    margin: 2rem auto;
+  }
+  .sendMessage {
+    cursor: pointer;
+    font-size: 14px !important;
+    font-weight: 900 !important;
+    border-radius: 58.434px;
+    background: #4b21ff;
+    display: flex;
+    padding: 19.795px 22.064px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 6.186px;
+    margin: 2rem auto;
+  }
+}
+
+.navBtn:hover {
+  color: rgba(255, 255, 255, 1);
+  box-shadow: 0 0px 20px #522cfbb0;
+  transition: 0.2s;
+}
+
+.sendMessage:hover {
+  color: rgba(255, 255, 255, 1);
+  box-shadow: 0 0px 20px #522cfbb0;
+  transition: 0.2s;
+}
+
+div.heading {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 600px) {
+  div.heading {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  div.heading {
+    font-size: 2rem;
+  }
+}
+
+.styles-module_item-tracker__3bypy {
+  position: absolute !important;
+  top: -160px;
+}
+
+div.subHeading {
+  color: #aab0fe;
+  font-size: 20px;
+  text-align: left;
+}
+
+div.eventHeading {
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: left;
+  margin-right: 0px;
+  padding: 1rem 1rem;
+  min-height: 80px;
+}
+
+.slideshow-container {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.slideshow-image-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s ease-out;
+  transform: translateX(calc(-100% / 3 * var(--current-image)));
+}
+
+.slideshow-image {
+  flex: 1;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.5;
+  transition: opacity 0.5s ease-out;
+}
+
+.slideshow-image.active {
+  opacity: 1;
+}
+
+.slideshow-controls {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.prev-btn,
+.next-btn {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 8px 16px;
+}
+
+.prev-btn:hover,
+.next-btn:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.nextui-c-iWjDFM {
+  height: 26.7px !important;
+}
+
+.nextui-c-PJLV {
+  background: #080e2b !important;
+  border: 0.2px solid rgba(74, 33, 255, 0.115);
+}
+
+@media only screen and (max-width: 992px) {
+  .nextui-c-PJLV {
+    width: 300px;
+    margin: auto;
+    text-align: center;
+  }
+}
+
+.backToTop {
+  bottom: 25px;
+  right: 25px;
+  position: fixed;
+  font-size: 130px;
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
+  border-radius: 55px;
+  -webkit-border-radius: 55px;
+  -moz-border-radius: 55px;
+  -ms-border-radius: 55px;
+  -o-border-radius: 55px;
+  background: rgb(16, 12, 45);
+}
+
+.backToTop:hover {
+  background: rgb(21, 28, 229);
+}
+
+.wrapper {
+  width: 100%;
+  height: 80vh;
+  margin: 36px 0;
+}
+
+.block-one {
+  background: rgb(50, 19, 206);
+}
+
+.block-two {
+  background: rgb(228, 146, 3);
+}
+
+.block-three {
+  background: rgb(4, 147, 230);
+}
+
+.block-four {
+  background: rgb(239, 53, 6);
+}
+
+.block-five {
+  background: rgb(45, 35, 244);
+}
+
+@media only screen and (max-width: 0px) {
+  .carousel-item {
+  }
+}
+
+.carousel-control-prev {
+  width: 50px !important;
+  height: 50px !important;
+  border: 1px solid #f5f2f840 !important;
+  border-radius: 2rem !important;
+  position: absolute !important;
+  z-index: 2 !important;
+  left: 0 !important;
+  transform: translateY(12rem) !important;
+}
+
+.carousel-control-next {
+  width: 50px !important;
+  height: 50px !important;
+  border: 1px solid #f5f2f840 !important;
+  border-radius: 2rem !important;
+  position: absolute !important;
+  z-index: 2 !important;
+  right: 0 !important;
+  transform: translateY(12rem) !important;
+}
+
+/* .carousel-indicators [data-bs-target] {
+
+  margin: 0px 6px !important;
+  border: none !important;
+  background-clip: padding-box !important;
+  transition: opacity .6s ease !important;
+  height: 12px !important;
+  width: 12px !important;
+  border-radius: 20px !important;
+} */
+
+.carousel-indicators {
+  position: absolute !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  z-index: 2 !important;
+  display: flex !important;
+  justify-content: center !important;
+  padding: 0 !important;
+  margin-right: 15% !important;
+  margin-bottom: 1rem !important;
+  margin-left: 15% !important;
+  list-style: none !important;
+  top: 88% !important;
+}
+
+.marquee {
+  margin: 0 auto;
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+}
+
+.marquee span {
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 5s linear infinite;
+}
+
+.marquee2 span {
+  animation-delay: 2.5s;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(-100%, 0);
+  }
 }
