--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -188,6 +188,7 @@ body {
 }
 
 .sendMessage {
+  color: white;
   cursor: pointer;
   font-size: 14px !important;
   font-weight: 900 !important;
@@ -245,19 +246,22 @@ body {
 }
 
 div.heading {
-  font-size: 4rem;
+  font-size: 44px;
   font-weight: 700;
 }
 
 @media screen and (max-width: 600px) {
   div.heading {
-    font-size: 1.5rem;
+    font-size: 36px;
   }
 }
 
 @media screen and (max-width: 992px) {
   div.heading {
-    font-size: 2rem;
+    font-size: 40px;
+  }
+  div.subHeading {
+    text-align: center !important;
   }
 }
 
@@ -566,6 +570,7 @@ body {
   display: block;
   z-index: 3333;
   height: 12px;
+  z-index: 0;
 }
 
 .testim .dots .dot {
