--- a/src/components/sections/title/title.module.scss
+++ b/src/components/sections/title/title.module.scss
@@ -15,6 +15,43 @@
   font-weight: bolder;
 }
 
+.cardSub {
+  border-radius: 7.423px;
+  border: 1.5px solid rgba(244, 242, 248, 0.25);
+  background: linear-gradient(
+      0deg,
+      rgba(11, 19, 59, 0.2) 0%,
+      rgba(11, 19, 59, 0.2) 100%
+    ),
+    rgba(41, 54, 119, 0.2);
+  backdrop-filter: blur(14.846222877502441px);
+  padding: 1rem;
+  font-weight: bolder;
+  width: 20rem;
+  padding-right: 4rem;
+  position: absolute;
+  left: 3rem;
+  bottom: 2%;
+}
+
+.cardSubAnim {
+  @extend .cardSub;
+  animation: slideAndFade 0.7s ease-out;
+}
+
+@keyframes slideAndFade {
+  0% {
+    transform: translateX(0rem);
+    opacity: 1;
+    rotate: 10deg;
+  }
+  100% {
+    transform: translateX(-10rem);
+    opacity: 0;
+    rotate: -45deg;
+  }
+}
+
 @media only screen and (max-width: 992) {
   .title {
     font-family: "Raleway";
