Made Changes To The Ipad and Mobile Versions

--- a/src/components/sections/events/events.module.scss
+++ b/src/components/sections/events/events.module.scss
@@ -278,3 +278,8 @@
     width: 100%;
   }
 }
+.heading {
+  font-family: "Raleway" !important;
+  font-size: 40px !important;
+  font-weight: 700 !important;
+}
