--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -209,7 +209,7 @@ body {
     border-radius: 58.434px;
     background: #4b21ff;
     display: flex;
-    width: 177px !important;
+    width: 200px !important;
     padding: 19.795px 22.064px;
     flex-direction: column;
     justify-content: center;
@@ -261,6 +261,12 @@ div.heading {
     font-size: 40px;
   }
   div.subHeading {
+    text-align: center !important;
+  }
+  .navbar-toggler {
+    margin-bottom: 1.5rem !important;
+  }
+  a.dropdown-item {
     text-align: center !important;
   }
 }
