--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@ body {
 
 html {
   background: #010725 !important;
+  overflow-x: hidden !important;
 }
 
 :root {
@@ -209,13 +210,12 @@ body {
     border-radius: 58.434px;
     background: #4b21ff;
     display: flex;
-    width: 200px !important;
-    padding: 19.795px 22.064px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 6.186px;
     margin: 2rem auto;
+    margin-left: 5rem;
+    justify-content: center !important;
   }
   .sendMessage {
     cursor: pointer;
@@ -560,10 +560,12 @@ body {
 
 .testim .arrow.left {
   left: 10px;
+  bottom: 2rem;
 }
 
 .testim .arrow.right {
   right: 10px;
+  bottom: 2rem;
 }
 
 .testim .dots {
@@ -656,6 +658,18 @@ body {
   .testim .dots .dot {
     width: 10px;
     height: 10px;
+  }
+
+  .testim .arrow.left {
+    height: 30vh;
+    top: 150%;
+    left: 20%;
+  }
+
+  .testim .arrow.right {
+    height: 30vh;
+    top: 150%;
+    right: 20%;
   }
 }
 
@@ -1176,4 +1190,36 @@ a.dropdown-item:hover {
 .teamGlobal {
   background: url("/matt.svg");
   background-position: top !important;
+}
+
+.dropdown-toggle::after {
+  margin-left: 1rem !important;
+}
+
+.modall {
+  background: url("/matt.svg") no-repeat;
+  background-position: center;
+}
+
+.pastEvent::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+.pastEvent::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+.pastEvent::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgb(122, 153, 217)),
+    color-stop(0.72, rgb(73, 125, 189)),
+    color-stop(0.86, rgb(28, 58, 148))
+  );
 }
