--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -6,10 +6,16 @@
 
 @media only screen and (max-width: 992px) {
   .iconsSocial {
-    display: flex;
+    display: block;
     justify-content: space-evenly;
     margin: 1rem auto;
-    width: 80%;
+    width: 65%;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 992px) {
+  .iconsSocial {
+    display: flex;
   }
 }
 
