--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -118,8 +118,12 @@ html {
     z-index: 3;
     width: 90% !important;
   }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 992px) {
   .navBtn {
-    position: relative;
+    left: 14rem;
+    top: 2rem;
   }
 }
 
@@ -679,7 +683,7 @@ body {
   }
   .navBtn {
     position: relative;
-    left: -2rem;
+    left: 2rem;
     margin: 2rem;
   }
 }
