--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -16,6 +16,7 @@
 @media only screen and (min-width: 601px) and (max-width: 992px) {
   .iconsSocial {
     display: flex;
+    margin-top: 5rem;
   }
 }
 
